# hqc

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  example.py  main.py  pyproject.toml  setup.py  test_pes.py
conf/: memory.yaml  scfrandom.yaml
doc/: Makefile  note.tex  refs.bib  solver_algorithm.md
hqc/basis/: BASIS_SOURCES.md  parse.py
hqc/gto/: ao.py  boys.py  gto.py  integral.py  mo.py  scf.py  solver.py
hqc/pbc/: ao.py  gto.py  gtos.py  hf.py  jaxxc.py  lcao.py  mo.py  overlap.py  pes.py  potential.py  pyscf.py  quicktest.py  scf.py  slater.py  solver.py
hqc/tools/: smearing.py
hydrogenqc/: __init__.py  mo.py
hydrogenqc/tests/: test_ao.py  test_mo.py
src/: ao.py  mo.py
src/gto/: ao.py  hf.py  mo.py
src/pbc/: ao.py  mo.py
test/: QUICK_REFERENCE.md  TEST_IMPROVEMENTS.md  UPGRADE_COMPLETE.md  config.py  hf.py  test.py  test_ao.py  test_bcc_solid.py  test_gto_ao.py  test_gto_boys.py  test_gto_gto.py  test_gto_mo.py  test_gto_multiple_basis.py  test_gto_performance.py  test_gto_scf.py  test_gto_sto_basis.py  test_mo.py  test_pbc_ao.py  test_pbc_gto.py  test_pbc_lcao.py  test_pbc_lcao_kpt.py  test_pbc_mo.py  test_pbc_overlap.py  test_pbc_pes.py  test_pbc_potential.py  test_pbc_solver.py  test_pyscf.py  test_slater.py  test_temp.py
test/tools/: logpsi.py  observables.py  potential.py
tests/: test_mo.py
tools/: convert_basis.py  download_pople_basis.sh
