[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hqc"
version = "0.1.12"
description = "Quantum chemistry calculations for Hydrogen systems using JAX"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Zihang Li", email = "lzh@iphy.ac.cn"}
]
keywords = ["quantum-chemistry", "hartree-fock", "dft", "jax", "hydrogen", "periodic-boundary-conditions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy>=1.20.0",
    "pyscf>=2.0.0",
]

[project.optional-dependencies]
testing = ["pytest>=7.0.0"]

[project.urls]
Homepage = "https://code.itp.ac.cn/lzh/hydrogen-qc"
Repository = "https://code.itp.ac.cn/lzh/hydrogen-qc"
Issues = "https://code.itp.ac.cn/lzh/hydrogen-qc/issues"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
select = [
    "E",
    "F",
    "I",
    "UP",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["hqc"]
profile = "black"
